(menhir
 (flags --strict --explain --table)
 (modules Grammar))

(ocamllex Lex)

(library
  (name Frontend)
  (preprocess (pps ppx_effects))
  (libraries bantorra yuujinchou
    stagedtt.elaborator
    stagedtt.unfold
    stagedtt.stage
    stagedtt.core
    menhirLib)
  (public_name stagedtt.frontend))